# ChangeLog for app-office/libreoffice
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-office/libreoffice/ChangeLog,v 1.136 2011/09/17 03:44:58 scarabeus Exp $

  17 Sep 2011; Tomáš Chvátal <scarabeus@gentoo.org>
  libreoffice-9999-r1.ebuild:
  Remove no longer needed patches.

  17 Sep 2011; Tomáš Chvátal <scarabeus@gentoo.org>
  libreoffice-9999-r1.ebuild:
  More smple cleanups.

  17 Sep 2011; Tomáš Chvátal <scarabeus@gentoo.org>
  libreoffice-9999-r1.ebuild:
  Cleanup the build a bit to reflect the changes in the buildsystem.

  16 Sep 2011; Tomáš Chvátal <scarabeus@gentoo.org>
  libreoffice-9999-r1.ebuild:
  Drop patches that were merged upstream.

  08 Sep 2011; Tomáš Chvátal <scarabeus@gentoo.org>
  libreoffice-3.4.9999-r1.ebuild, libreoffice-9999-r1.ebuild:
  Add missing die

  08 Sep 2011; Tomáš Chvátal <scarabeus@gentoo.org>
  libreoffice-3.4.9999-r1.ebuild, libreoffice-9999-r1.ebuild:
  Use bashcomp-r1 eclass instead of old one.

  08 Sep 2011; Tomáš Chvátal <scarabeus@gentoo.org>
  libreoffice-3.4.3.2-r1.ebuild, libreoffice-3.4.9999-r1.ebuild,
  libreoffice-9999-r1.ebuild, +files/libreoffice-java.patch:
  Fix the case of passing without-system-libs when using -java.

  06 Sep 2011; Tomáš Chvátal <scarabeus@gentoo.org>
  libreoffice-3.4.3.2-r1.ebuild, libreoffice-3.4.9999-r1.ebuild,
  +files/libreoffice-honor-strip.patch:
  Apply patch to disable striping, we handle it by PM.

  05 Sep 2011; Tomáš Chvátal <scarabeus@gentoo.org>
  libreoffice-3.4.3.2-r1.ebuild, libreoffice-3.4.9999-r1.ebuild,
  libreoffice-9999-r1.ebuild:
  Depend on latest icu to ensure fixing of bug #381327.

  05 Sep 2011; Tomáš Chvátal <scarabeus@gentoo.org>
  libreoffice-3.3.4.ebuild, libreoffice-3.4.3.2-r1.ebuild,
  libreoffice-3.4.9999-r1.ebuild, libreoffice-9999-r1.ebuild:
  Update the check-reqs eclass usage. Remove obsolete warning about jobs.

  04 Sep 2011; Tony Vroon <chainsaw@gentoo.org> libreoffice-3.3.4.ebuild: